--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
     <link rel='stylesheet' type='text/css' href='./resources/css/style.css'>
   </head>
   <body>
+    <div class="container">
+
+
 
 <!-- Header/Navigation Section -->
     <header>
-      <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo">
-      </div>
-      <div>
-        <span class="colmar">COLMAR</span>
-        <span class="academy">ACADEMY</span>
+
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg" alt="Colmar Academy logo">
+          <span class="colmar">COLMAR</span>
+           <span class="academy">ACADEMY</span>
       </div>
 
       <nav>
-        <span><a href="#">On campus</a></span>
-        <span><a href="#">Online</a></span>
-        <span><a href="#">For companies</a></span>
-        <span><a href="#">Sign in</a></span>
+        <span>On campus</span>
+          <span>Online</span>
+          <span>For companies</span>
+          <span>Sign in</span>
       </nav>
-    </header>
+  </header>
 
+
+
+    </div>
   </body>
 </html>
