--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' type='text/css' href='./resources/css/style.css'>
   </head>
   <body>
-    <div class="container">
+
 
 
 
@@ -21,15 +21,15 @@
       </div>
 
       <nav>
-        <span>On campus</span>
-          <span>Online</span>
-          <span>For companies</span>
-          <span>Sign in</span>
+          <span><a href="#">On campus</a></span>
+          <span><a href="#">Online</a></span>
+          <span><a href="#">For companies</a></span>
+          <span><a href="#">Sign in</a></span>
       </nav>
   </header>
 
 
 
-    </div>
+
   </body>
 </html>
