--- a/index.html
+++ b/index.html
@@ -28,6 +28,64 @@
       </nav>
   </header>
 
+<!-- Banner Section -->
+
+<div class="container">
+  <div class="banner">
+    <img src="./resources/images/banner.jpg" alt="students studying outside">
+    <h1 class="learn">Learn something new everyday</h1>
+    <h3 class="lorem">Lorem ipsum dolor sit amet,consectetur adipiscing elit.</h3>
+  </div>
+  <div class="start">
+    <h3>START HERE</h3>
+  </div>
+</div>
+
+<!-- Campus Info Section -->
+
+<div class="info-section">
+  <div class="info">
+    <div class="image-container">
+      <img src="./resources/images/information-main.jpg" alt="male student reading a book outside">
+    </div>
+    <div class="content">
+      <h2>It doesn't hurt to keep practicing</h2>
+      <p>"Cum et placerat repudiare torquatos, semper concludaturque cu vel, vix ceteros percipit an. Errem cotidieque id cum. Elit ignota melius pro te, ei ceteros oportere mea. Ea odio postulant vim, duo alii nobis mediocrem ad, nisl consequat ea vel."</p>
+      <p>Emanuel, Sr Strategist at Hiring.com</p>
+    </div>
+    <div class="campus-info">
+      <div class="orientation">
+        <img src="./resources/images/information-orientation.jpg" alt="students walking outside">
+        <div class="description">
+          <h3>Orientation date</h3>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+
+      <div class="our-campus">
+        <img src="./resources/images/information-campus.jpg" alt="students studying inside">
+        <div class="description">
+          <h3>Our campus</h3>
+          <p>Find which campus is close by you</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+
+      <div class="guest">
+        <img src="./resources/images/information-guest-lecture.jpg" alt="man in a beret and glasses with a white short beard">
+        <div class="description">
+          <h3>Our guest lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <a href="#">Read more</a>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Learning Section -->
+
 
 
 
