--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <div class="container">
   <div class="banner">
     <img src="./resources/images/banner.jpg" alt="students studying outside">
-    <h1 class="learn">Learn something new everyday</h1>
-    <h3 class="lorem">Lorem ipsum dolor sit amet,consectetur adipiscing elit.</h3>
   </div>
-  <div class="start">
-    <h3>START HERE</h3>
+  <div class="learn">
+    <h1>Learn something new everyday</h1>
+    <h3>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</h3>
+    <h3 class="start">START HERE</h3>
   </div>
 </div>
 
