--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="learn">
     <h1>Learn something new everyday</h1>
     <h3>Lorem ipsum dolor sit amet,consectetur adipiscing elit.</h3>
-    <h3 class="start">START HERE</h3>
+    <a href="#">Start Here</a>
   </div>
 </div>
 
