First css on campus info sect

--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
 
 <!-- Campus Info Section -->
 
-<div class="info-section">
-  <div class="info">
+<div class="container">
+   <div class="info">
     <div class="image-container">
       <img src="./resources/images/information-main.jpg" alt="male student reading a book outside">
     </div>
     <div class="content">
       <h2>It doesn't hurt to keep practicing</h2>
       <p>"Cum et placerat repudiare torquatos, semper concludaturque cu vel, vix ceteros percipit an. Errem cotidieque id cum. Elit ignota melius pro te, ei ceteros oportere mea. Ea odio postulant vim, duo alii nobis mediocrem ad, nisl consequat ea vel."</p>
-      <p>Emanuel, Sr Strategist at Hiring.com</p>
+      <a href="#">Emanuel, Sr Strategist at Hiring.com</a>
     </div>
+  </div>
+
     <div class="campus-info">
       <div class="orientation">
         <img src="./resources/images/information-orientation.jpg" alt="students walking outside">
@@ -81,8 +83,8 @@
       </div>
       </div>
     </div>
-  </div>
 </div>
+
 
 <!-- Learning Section -->
 
