--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="content">
       <h2>It doesn't hurt to keep practicing</h2>
       <p>"Cum et placerat repudiare torquatos, semper concludaturque cu vel, vix ceteros percipit an. Errem cotidieque id cum. Elit ignota melius pro te, ei ceteros oportere mea. Ea odio postulant vim, duo alii nobis mediocrem ad, nisl consequat ea vel."</p>
-      <a href="#">Emanuel, Sr Strategist at Hiring.com</a>
+      <a href="#">~&nbspEmanuel, Sr Strategist at Hiring.com</a>
     </div>
   </div>
 
@@ -87,6 +87,51 @@
 
 
 <!-- Learning Section -->
+
+<div class="container">
+    <div class="learning">
+      <h2>Start Learning</h2>
+    </div>
+<div class="courses">
+  <div class="course-images">
+    <img src="./resources/images/course-software.jpg" alt="two desktop computers on a desk">
+    <h3>Software engineering</h3>
+    <p>COURSES</p>
+    <p>Web Development, Mobile Development, iOT, APIs</p>
+  </div>
+  <div class="course-images">
+    <img src="./resources/images/course-computer-art.jpg" alt="male hand holding a cell phone viewing the screen. cup of coffee in background on a table">
+    <h3>Computer art</h3>
+    <p>COURSES</p>
+    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer animation</p>
+  </div>
+  <div class="course-images">
+    <img src="./resources/images/course-design.jpg" alt="person holding camera at stomach level while adjusting the focus">
+    <h3>Design</h3>
+    <p>COURSES</p>
+    <p>User Experience Design, User Research, Visual Design</p>
+  </div>
+  <div class="course-images">
+    <img src="./resources/images/course-data.jpg" alt="open laptop computer on a table displaying data graphs">
+    <h3>Data</h3>
+    <p>COURSES</p>
+    <p>Data Science, Big Data, SQL, Data Visualization</p>
+  </div>
+  <div class="course-images">
+    <img src="./resources/images/course-business.jpg" alt="chess set">
+    <h3>Business</h3>
+    <p>COURSES</p>
+    <p>Product Development, Business Development, Startup</p>
+  </div>
+  <div class="course-images">
+    <img src="./resources/images/course-marketing.jpg" alt="smart watch on a persons arm and they are touching it">
+    <h3>Marketing</h3>
+    <p>COURSES</p>
+    <p>Analytics, Content Marketing, Mobile Marketing</p>
+  </div>
+</div>
+</div>
+
 
 
 
