Second commit for learning section

--- a/index.html
+++ b/index.html
@@ -88,46 +88,46 @@
 
 <!-- Learning Section -->
 
-<div class="container">
+<div class="learn-contain"> <!-- Start Here - CSS this container -->
     <div class="learning">
       <h2>Start Learning</h2>
     </div>
 <div class="courses">
   <div class="course-images">
     <img src="./resources/images/course-software.jpg" alt="two desktop computers on a desk">
-    <h3>Software engineering</h3>
-    <p>COURSES</p>
-    <p>Web Development, Mobile Development, iOT, APIs</p>
+    <h3 class="classes">Software engineering</h3>
+    <p class="classes">COURSES</p>
+    <p class="classes">Web Development, Mobile Development, iOT, APIs</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-computer-art.jpg" alt="male hand holding a cell phone viewing the screen. cup of coffee in background on a table">
-    <h3>Computer art</h3>
-    <p>COURSES</p>
-    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer animation</p>
+    <h3 class="classes">Computer art</h3>
+    <p class="classes">COURSES</p>
+    <p class="classes">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer animation</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-design.jpg" alt="person holding camera at stomach level while adjusting the focus">
-    <h3>Design</h3>
-    <p>COURSES</p>
-    <p>User Experience Design, User Research, Visual Design</p>
+    <h3 class="classes">Design</h3>
+    <p class="classes">COURSES</p>
+    <p class="classes">User Experience Design, User Research, Visual Design</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-data.jpg" alt="open laptop computer on a table displaying data graphs">
-    <h3>Data</h3>
-    <p>COURSES</p>
-    <p>Data Science, Big Data, SQL, Data Visualization</p>
+    <h3 class="classes">Data</h3>
+    <p class="classes">COURSES</p>
+    <p class="classes">Data Science, Big Data, SQL, Data Visualization</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-business.jpg" alt="chess set">
-    <h3>Business</h3>
-    <p>COURSES</p>
-    <p>Product Development, Business Development, Startup</p>
+    <h3 class="classes">Business</h3>
+    <p class="classes">COURSES</p>
+    <p class="classes">Product Development, Business Development, Startup</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-marketing.jpg" alt="smart watch on a persons arm and they are touching it">
-    <h3>Marketing</h3>
-    <p>COURSES</p>
-    <p>Analytics, Content Marketing, Mobile Marketing</p>
+    <h3 class="classes">Marketing</h3>
+    <p class="classes">COURSES</p>
+    <p class="classes">Analytics, Content Marketing, Mobile Marketing</p>
   </div>
 </div>
 </div>
