Started on thesis sect & footer

--- a/index.html
+++ b/index.html
@@ -88,49 +88,99 @@
 
 <!-- Learning Section -->
 
-<div class="learn-contain"> <!-- Start Here - CSS this container -->
+<div class="learn-container">
     <div class="learning">
       <h2>Start Learning</h2>
     </div>
 <div class="courses">
   <div class="course-images">
     <img src="./resources/images/course-software.jpg" alt="two desktop computers on a desk">
-    <h3 class="classes">Software engineering</h3>
+    <h3 class="classes"><a href="#">Software engineering</a></h3>
     <p class="classes">COURSES</p>
     <p class="classes">Web Development, Mobile Development, iOT, APIs</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-computer-art.jpg" alt="male hand holding a cell phone viewing the screen. cup of coffee in background on a table">
-    <h3 class="classes">Computer art</h3>
+    <h3 class="classes"><a href="#">Computer art</a></h3>
     <p class="classes">COURSES</p>
     <p class="classes">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer animation</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-design.jpg" alt="person holding camera at stomach level while adjusting the focus">
-    <h3 class="classes">Design</h3>
+    <h3 class="classes"><a href="#">Design</a></h3>
     <p class="classes">COURSES</p>
     <p class="classes">User Experience Design, User Research, Visual Design</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-data.jpg" alt="open laptop computer on a table displaying data graphs">
-    <h3 class="classes">Data</h3>
+    <h3 class="classes"><a href="#">Data</a></h3>
     <p class="classes">COURSES</p>
     <p class="classes">Data Science, Big Data, SQL, Data Visualization</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-business.jpg" alt="chess set">
-    <h3 class="classes">Business</h3>
+    <h3 class="classes"><a href="#">Business</a></h3>
     <p class="classes">COURSES</p>
     <p class="classes">Product Development, Business Development, Startup</p>
   </div>
   <div class="course-images">
     <img src="./resources/images/course-marketing.jpg" alt="smart watch on a persons arm and they are touching it">
-    <h3 class="classes">Marketing</h3>
+    <h3 class="classes"><a href="#">Marketing</a></h3>
     <p class="classes">COURSES</p>
     <p class="classes">Analytics, Content Marketing, Mobile Marketing</p>
   </div>
 </div>
 </div>
+
+<!-- Thesis Section -->
+
+<div class="thesis-container">
+  <div class="thesis-exhibit">
+    <h2>Thesis exhibit</h2>
+  </div>
+  <div class="thesis">
+   <div class="video-container">
+     <video src="./resources/videos/thesis.mp4">
+       <p>Sorry, your browser doesn't support this video player.</p>
+     </video>
+   </div>
+   <div class="reimagine">
+     <h3>Reimagine urban...</h3>
+     <p>"Cum et placerat repudiare torquatos, semper concludaturque cu vel, vix ceteros percipit an. Errem cotidieque id cum. Elit ignota melius pro te, ei ceteros oportere mea. Ea odio postulant vim, duo alii nobis mediocrem ad, nisl consequat ea vel."</p>
+   </div>
+ </div>
+
+ <div class="thesis-images">
+     <div class="fisma">
+       <img src="./resources/images/thesis-fisma.jpg" alt="students designing on paper">
+       <div class="design">
+         <h3><a href="#">Fisma: Design and Prototype</a></h3>
+         <p>Designer showcase of new prototype product</p>
+       </div>
+     </div>
+
+     <div class="now-then">
+       <img src="./resources/images/thesis-now-and-then.jpg" alt="New York City">
+       <div class="research">
+         <h3><a href="#">Now and then</a></h3>
+         <p>Research study about New York</p>
+       </div>
+     </div>
+ </div>
+</div>
+
+<!-- Footer Section -->
+
+<footer class="copyright">
+    <span>© 2016 Colmar Academy. All rights reserved<span>
+
+  <nav class="footer">
+    <ul>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Privacy</a></li>
+    </ul>
+  </nav>
+</footer>
 
 
 
