Work on thesis and footer

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 <!-- Thesis Section -->
 
 <div class="thesis-container">
-  <div class="thesis-exhibit">
+<div class="thesis-exhibit">
     <h2>Thesis exhibit</h2>
   </div>
-  <div class="thesis">
-   <div class="video-container">
+  <div class="video-container">
+    <div class="thesis">
      <video src="./resources/videos/thesis.mp4">
        <p>Sorry, your browser doesn't support this video player.</p>
      </video>
@@ -159,9 +159,9 @@
        </div>
      </div>
 
-     <div class="now-then">
+     <div class="fisma">
        <img src="./resources/images/thesis-now-and-then.jpg" alt="New York City">
-       <div class="research">
+       <div class="design">
          <h3><a href="#">Now and then</a></h3>
          <p>Research study about New York</p>
        </div>
@@ -171,7 +171,7 @@
 
 <!-- Footer Section -->
 
-<footer class="copyright">
+<footer>
     <span>© 2016 Colmar Academy. All rights reserved<span>
 
   <nav class="footer">
