Finished desktop site

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
   </div>
 </div>
 
+<hr>
+
 <!-- Campus Info Section -->
 
 <div class="container">
@@ -85,6 +87,7 @@
     </div>
 </div>
 
+<hr>
 
 <!-- Learning Section -->
 
@@ -132,15 +135,18 @@
 </div>
 </div>
 
-<!-- Thesis Section -->
+<hr>
 
-<div class="thesis-container">
+<!-- Thesis Section -->
 <div class="thesis-exhibit">
     <h2>Thesis exhibit</h2>
-  </div>
+ </div>
+
+  <!-- Thesis Images -->
+<div class="thesis-container">
   <div class="video-container">
     <div class="thesis">
-     <video src="./resources/videos/thesis.mp4">
+     <video src="./resources/videos/thesis.mp4"  controls>
        <p>Sorry, your browser doesn't support this video player.</p>
      </video>
    </div>
@@ -168,6 +174,7 @@
      </div>
  </div>
 </div>
+
 
 <!-- Footer Section -->
 
