First mobile commit

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
           <span><a href="#">For companies</a></span>
           <span><a href="#">Sign in</a></span>
       </nav>
+
+      <!-- Mobile Header -->
+      <div class="mobile">
+        <a href="#">
+        <img src="./resources/images/ic-logo.svg" alt="Colomar Academy home">
+        </a>
+        <a href="#"><img src="./resources/images/ic-on-campus.svg" alt="on campus">
+        </a>
+        <a href="#">
+        <img src="./resources/images/ic-online.svg" alt="online">
+        </a>
+        <a href="#">
+        <img src="./resources/images/ic-login.svg" alt="login">
+        </a>
+      </div>
   </header>
 
 <!-- Banner Section -->
@@ -59,7 +74,7 @@
 
     <div class="campus-info">
       <div class="orientation">
-        <img src="./resources/images/information-orientation.jpg" alt="students walking outside">
+        <img class="desktop-image" src="./resources/images/information-orientation.jpg" alt="students walking outside">
         <div class="description">
           <h3>Orientation date</h3>
           <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -85,6 +100,8 @@
       </div>
       </div>
     </div>
+<!-- Image for Mobile -->
+    <img class="mobile-image" src="./resources/images/information-orientation-mobile.jpg" alt="students walking outside">
 </div>
 
 <hr>
