--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
     </div>
   </div>
 
-    <div class="campus-info">
-      <div class="orientation">
-        <img class="desktop-image" src="./resources/images/information-orientation.jpg" alt="students walking outside">
+    <div class="campus">
+      <div class="campus-info">
+        <img class="full-image" src="./resources/images/information-orientation.jpg" alt="aerial view of students walking outside">
+        <!-- Image for Mobile -->
+        <img class="mobile-image" src="./resources/images/information-orientation-mobile.jpg" alt="aerial view of students walking outside">
+
         <div class="description">
           <h3>Orientation date</h3>
           <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -82,8 +85,10 @@
         </div>
       </div>
 
-      <div class="our-campus">
-        <img src="./resources/images/information-campus.jpg" alt="students studying inside">
+      <div class="campus-info">
+        <img class="full-image" src="./resources/images/information-campus.jpg" alt="students studying inside at a table with a large map on the wall">
+        <!-- Image for Mobile -->
+        <img class="mobile-image" src="./resources/images/information-campus-mobile.jpg" alt="students studying inside at a table with a large map on the wall">
         <div class="description">
           <h3>Our campus</h3>
           <p>Find which campus is close by you</p>
@@ -91,8 +96,10 @@
         </div>
       </div>
 
-      <div class="guest">
-        <img src="./resources/images/information-guest-lecture.jpg" alt="man in a beret and glasses with a white short beard">
+      <div class="campus-info">
+        <img class="full-image" src="./resources/images/information-guest-lecture.jpg" alt="man in a beret and glasses with a white short beard">
+        <!-- Image for Mobile -->
+        <img class="mobile-image" src="./resources/images/information-guest-lecture-mobile.jpg" alt="man in a beret and glasses with a white short beard">
         <div class="description">
           <h3>Our guest lecture</h3>
           <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -100,8 +107,7 @@
       </div>
       </div>
     </div>
-<!-- Image for Mobile -->
-    <img class="mobile-image" src="./resources/images/information-orientation-mobile.jpg" alt="students walking outside">
+
 </div>
 
 <hr>
@@ -149,6 +155,15 @@
     <p class="classes">COURSES</p>
     <p class="classes">Analytics, Content Marketing, Mobile Marketing</p>
   </div>
+  <!-- Mobile Learning Section -->
+  <div class="mobile-learning">
+    <h2><a href="#">Software engineering</a></h2>
+    <h2><a href="#">Computer art</a></h2>
+    <h2><a href="#">Design</a></h2>
+    <h2><a href="#">Data</a></h2>
+    <h2><a href="#">Business</a></h2>
+    <h2><a href="#">Marketing</a></h2>
+  </div>
 </div>
 </div>
 
@@ -163,7 +178,7 @@
 <div class="thesis-container">
   <div class="video-container">
     <div class="thesis">
-     <video src="./resources/videos/thesis.mp4"  controls>
+     <video src="./resources/videos/thesis.mp4"  controls muted>
        <p>Sorry, your browser doesn't support this video player.</p>
      </video>
    </div>
